syntax = "proto3";

package authpb;

option go_package = "github.com/Vovarama1992/go-ai-messenger/proto/authpb;authpb";

service AuthService {
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  int64 user_id = 1;
  string email = 2; 
}